-
Bug
-
Resolution: Fixed
-
P1: Critical
-
5.15.7
-
None
-
-
9c5425291 (dev), fd53ed433 (6.7), c34daa62e (6.6), 2a389f257 (tqtc/lts-6.5), 4ca3d4a24 (tqtc/lts-6.2), 4299d0bb9 (tqtc/lts-5.15)
The APP is stuck in the main thread after waking up from STR.
(gdb) bt
#0 0x0000002dc841c15c in QQuickParticleGroupData::recycle() () from /home/fanxiaojun/work/Dongfeng/Code/S73_release1201/coredump/soclibs/qtlibs/lib/libQt5QuickParticles.so.5
#1 0x0000002dc841ffe4 in QQuickParticleSystem::updateCurrentTime(int) () from /home/fanxiaojun/work/Dongfeng/Code/S73_release1201/coredump/soclibs/qtlibs/lib/libQt5QuickParticles.so.5
#2 0x0000002dc4647384 in QAbstractAnimation::setCurrentTime(int) () from /home/fanxiaojun/work/Dongfeng/Code/S73_release1201/coredump/soclibs/qtlibs/lib/libQt5Core.so.5
#3 0x0000002dc46476cc in QUnifiedTimer::updateAnimationTimers(long long) () from /home/fanxiaojun/work/Dongfeng/Code/S73_release1201/coredump/soclibs/qtlibs/lib/libQt5Core.so.5
#4 0x0000002dc4648410 in QAnimationDriver::advanceAnimation(long long) () from /home/fanxiaojun/work/Dongfeng/Code/S73_release1201/coredump/soclibs/qtlibs/lib/libQt5Core.so.5
#5 0x0000002dc488117c in QObject::event(QEvent*) () from /home/fanxiaojun/work/Dongfeng/Code/S73_release1201/coredump/soclibs/qtlibs/lib/libQt5Core.so.5
#6 0x0000002dc2855fe4 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /home/fanxiaojun/work/Dongfeng/Code/S73_release1201/coredump/soclibs/qtlibs/lib/libQt5Widgets.so.5
#7 0x0000002dc285d784 in QApplication::notify(QObject*, QEvent*) () from /home/fanxiaojun/work/Dongfeng/Code/S73_release1201/coredump/soclibs/qtlibs/lib/libQt5Widgets.so.5
#8 0x0000002dc484f03c in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /home/fanxiaojun/work/Dongfeng/Code/S73_release1201/coredump/soclibs/qtlibs/lib/libQt5Core.so.5
#9 0x0000002dc48aefe8 in QTimerInfoList::activateTimers() () from /home/fanxiaojun/work/Dongfeng/Code/S73_release1201/coredump/soclibs/qtlibs/lib/libQt5Core.so.5
#10 0x0000002dc48ad858 in QEventDispatcherUNIX::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /home/fanxiaojun/work/Dongfeng/Code/S73_release1201/coredump/soclibs/qtlibs/lib/libQt5Core.so.5
#11 0x0000002dc6e84c64 in ?? ()
#12 0x00000032263f8998 in ?? ()
Backtrace stopped: previous frame inner to this frame (corrupt stack?)
(gdb) info threads
Id Target Id Frame
*1 pid 1339510 tid 1 (STOPPED) 0x0000002dc841c15c in QQuickParticleGroupData::recycle() () from /home/fanxiaojun/work/Dongfeng/Code/S73_release1201/coredump/soclibs/qtlibs/lib/libQt5QuickParticles.so.5
2 pid 1339510 tid 2 (RECEIVE) MsgReceive () at /builds/workspace/700-SDP/build_aarch64/lib/c/kercalls/aarch64/MsgReceive.S:9
3 pid 1339510 tid 3 (SIGWAITINFO) SignalWaitinfoMask () at /builds/workspace/700-SDP/build_aarch64/lib/c/kercalls/aarch64/SignalWaitinfoMask.S:8
4 pid 1339510 tid 4 (STOPPED) SyncSemWait () at /builds/workspace/700-SDP/build_aarch64/lib/c/kercalls/aarch64/SyncSemWait.S:9
5 pid 1339510 tid 5 (SEM) SyncSemWait () at /builds/workspace/700-SDP/build_aarch64/lib/c/kercalls/aarch64/SyncSemWait.S:8
6 pid 1339510 tid 6 (SEM) SyncSemWait () at /builds/workspace/700-SDP/build_aarch64/lib/c/kercalls/aarch64/SyncSemWait.S:8
7 pid 1339510 tid 7 (SEM) SyncSemWait () at /builds/workspace/700-SDP/build_aarch64/lib/c/kercalls/aarch64/SyncSemWait.S:8
8 pid 1339510 tid 8 (SEM) SyncSemWait () at /builds/workspace/700-SDP/build_aarch64/lib/c/kercalls/aarch64/SyncSemWait.S:8
9 pid 1339510 tid 9 (SEM) SyncSemWait () at /builds/workspace/700-SDP/build_aarch64/lib/c/kercalls/aarch64/SyncSemWait.S:8
10 pid 1339510 tid 10 (SEM) SyncSemWait () at /builds/workspace/700-SDP/build_aarch64/lib/c/kercalls/aarch64/SyncSemWait.S:8
11 pid 1339510 tid 11 (CONDVAR) SyncCondvarWait_r () at /builds/workspace/700-SDP/build_aarch64/lib/c/kercalls/aarch64/SyncCondvarWait_r.S:8
12 pid 1339510 tid 12 (STOPPED) SyncSemWait () at /builds/workspace/700-SDP/build_aarch64/lib/c/kercalls/aarch64/SyncSemWait.S:8
13 pid 1339510 tid 13 (SEM) SyncSemWait () at /builds/workspace/700-SDP/build_aarch64/lib/c/kercalls/aarch64/SyncSemWait.S:8
14 pid 1339510 tid 14 (SEM) SyncSemWait () at /builds/workspace/700-SDP/build_aarch64/lib/c/kercalls/aarch64/SyncSemWait.S:8
15 pid 1339510 tid 15 (SEM) SyncSemWait () at /builds/workspace/700-SDP/build_aarch64/lib/c/kercalls/aarch64/SyncSemWait.S:8
16 pid 1339510 tid 16 (SEM) SyncSemWait () at /builds/workspace/700-SDP/build_aarch64/lib/c/kercalls/aarch64/SyncSemWait.S:8
17 pid 1339510 tid 17 (SIGWAITINFO) SignalWaitinfoMask () at /builds/workspace/700-SDP/build_aarch64/lib/c/kercalls/aarch64/SignalWaitinfoMask.S:8
18 pid 1339510 tid 18 (SIGWAITINFO) SignalWaitinfoMask () at /builds/workspace/700-SDP/build_aarch64/lib/c/kercalls/aarch64/SignalWaitinfoMask.S:8
- relates to
-
QTBUG-123880 Summary of issues related to animation runtime
-
- Closed
-
| For Gerrit Dashboard: QTBUG-123111 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 547721,6 | Fix deadlock in long-running particle system | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 548014,2 | Fix deadlock in long-running particle system | 6.7 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 548129,2 | Fix deadlock in long-running particle system | 6.6 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 548386,2 | Fix deadlock in long-running particle system | tqtc/lts-6.5 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |
| 548449,2 | Fix deadlock in long-running particle system | tqtc/lts-6.2 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |
| 548833,3 | Fix deadlock in long-running particle system | tqtc/lts-5.15 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |