src/particles/qquickparticlesystem_p.h
@@ -83,6 +83,8 @@ public:
 
     int top();
 
+    bool isEmpty() const { return m_end == 0; }
+
     QSet<QQuickParticleData*> pop();
 
     void clear();
